{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 127,
  "lineage": "eda50652-79e4-ac3a-75ec-4fc96d3d74a5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "env_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ea7fc98648e0eb0",
            "arn": "arn:aws:ec2:eu-west-3:044173279858:elastic-ip/eipalloc-06ea7fc98648e0eb0",
            "association_id": "eipassoc-03d8dcc9311208ace",
            "domain": "vpc",
            "id": "eipalloc-06ea7fc98648e0eb0",
            "instance": "i-09810249633937238",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-04b790856e3c583ba",
            "private_dns": "ip-10-0-1-246.eu-west-3.compute.internal",
            "private_ip": "10.0.1.246",
            "public_dns": "ec2-15-188-250-128.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.250.128",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-3",
            "tags": {
              "Name": "test-env-eip",
              "Owner": "erdemir@deloitte.com"
            },
            "tags_all": {
              "Name": "test-env-eip",
              "Owner": "erdemir@deloitte.com"
            }
          },
          "dependencies": [
            "aws_instance.env",
            "aws_security_group.env_sg",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01d21b7be69801c2f",
            "arn": "arn:aws:ec2:eu-west-3:044173279858:instance/i-09810249633937238",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09810249633937238",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "erdemir-paris-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04b790856e3c583ba"
              }
            ],
            "primary_network_interface_id": "eni-04b790856e3c583ba",
            "private_dns": "ip-10-0-1-246.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.246",
            "public_dns": "ec2-15-188-250-128.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.250.128",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-west-3:044173279858:key/2bcbaddf-20c3-4b42-b330-f6434f6c0abf",
                "throughput": 0,
                "volume_id": "vol-065c9adfa3957b8b4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c9866559ce6b365",
            "tags": {
              "Name": "test-env",
              "Owner": "erdemir@deloitte.com",
              "Template": "web"
            },
            "tags_all": {
              "Name": "test-env",
              "Owner": "erdemir@deloitte.com",
              "Template": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09e7cecf3e1438a0e"
            ]
          },
          "dependencies": [
            "aws_security_group.env_sg",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:044173279858:internet-gateway/igw-0e83cd55658f87b5d",
            "id": "igw-0e83cd55658f87b5d",
            "owner_id": "044173279858",
            "region": "eu-west-3",
            "tags": {
              "Name": "MainInternetGateway",
              "Owner": "erdemir@deloitte.com"
            },
            "tags_all": {
              "Name": "MainInternetGateway",
              "Owner": "erdemir@deloitte.com"
            },
            "vpc_id": "vpc-0f51104e5d6f58333"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:044173279858:route-table/rtb-07a3f89ffa3ff1721",
            "id": "rtb-07a3f89ffa3ff1721",
            "owner_id": "044173279858",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e83cd55658f87b5d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable",
              "Owner": "erdemir@deloitte.com"
            },
            "tags_all": {
              "Name": "PublicRouteTable",
              "Owner": "erdemir@deloitte.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f51104e5d6f58333"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f8173e5b45160f6",
            "region": "eu-west-3",
            "route_table_id": "rtb-07a3f89ffa3ff1721",
            "subnet_id": "subnet-03c9866559ce6b365"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "env_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:044173279858:security-group/sg-09e7cecf3e1438a0e",
            "description": "Allow SSH, HTTP, 8080, 9090",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e7cecf3e1438a0e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "test-env_sg",
            "name_prefix": "",
            "owner_id": "044173279858",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-env-sg",
              "Owner": "erdemir@deloitte.com"
            },
            "tags_all": {
              "Name": "test-env-sg",
              "Owner": "erdemir@deloitte.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f51104e5d6f58333"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:044173279858:subnet/subnet-03c9866559ce6b365",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c9866559ce6b365",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "044173279858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "MainSubnet",
              "Owner": "erdemir@deloitte.com"
            },
            "tags_all": {
              "Name": "MainSubnet",
              "Owner": "erdemir@deloitte.com"
            },
            "vpc_id": "vpc-0f51104e5d6f58333"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:044173279858:vpc/vpc-0f51104e5d6f58333",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bf0b32be3e73c83c",
            "default_route_table_id": "rtb-0751804ede6bf560d",
            "default_security_group_id": "sg-0364f11aea5269b98",
            "dhcp_options_id": "dopt-21550c48",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f51104e5d6f58333",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0751804ede6bf560d",
            "owner_id": "044173279858",
            "region": "eu-west-3",
            "tags": {
              "Name": "MainVPC",
              "Owner": "erdemir@deloitte.com"
            },
            "tags_all": {
              "Name": "MainVPC",
              "Owner": "erdemir@deloitte.com"
            }
          }
        }
      ]
    }
  ]
}